syntax = "proto3";

package product;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
}

message ProductRequest {
  Product product = 1;
}

message ProductResponse {
  Product product = 1;
}

message ProductList {
  repeated ProductResponse products = 1;
}

message Empty {}

service ProductService {
  rpc CreateProduct (ProductRequest) returns (ProductResponse) {}
  rpc ListProduct (Empty) returns (ProductList) {}
}
